--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,11 @@ plugins {
 targetCompatibility = JavaVersion.VERSION_1_8
 sourceCompatibility = JavaVersion.VERSION_1_8
 
-version = "$project.minecraft_version-$project.version"
+version = "$project.minecraft_version-${project.version}"
+
+if (System.env.TRAVIS_BRANCH != 'master') {
+    version += "-${System.env.TRAVIS_BRANCH}"
+}
 
 if (project.release != 'RELEASE') {
     version += "-${project.release}"
@@ -33,13 +37,6 @@ repositories {
     maven {
         name = 'minelp-release'
         url = 'http://repo.minelittlepony-mod.com/maven/release'
-    }
-}
-
-// check for updates every build when on CI
-if (System.env.CI) {
-    configurations.all {
-        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
 }
 
