Fix kirin version

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,4 +17,4 @@ org.gradle.daemon=false
 
 # Dependencies
   http_client_version=4.3.2
-  kirin_version=1.15-pre1-1.5-SNAPSHOT
+  kirin_version=1.15-pre1-1.5-1.15-pre1-SNAPSHOT
