Include the branch name but only when it makes sense

--- a/gradle.properties
+++ b/gradle.properties
@@ -18,4 +18,4 @@ org.gradle.daemon=false
 # Dependencies
   modmenu_version=1.8.0.1.15-pre3+build.14
   http_client_version=4.3.2
-  kirin_version=1.15-pre3-1.5-1.15-pre3-SNAPSHOT
+  kirin_version=1.5-1.15-pre3-SNAPSHOT
