--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.daemon=false
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
   version=6
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
   modmenu_version=1.8.0.1.15-pre3+build.14
