--- a/gradle.properties
+++ b/gradle.properties
@@ -12,10 +12,15 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
+
+# === READ THIS === #
+# When making a release, change release to 'RELEASE'.
+# After committing and tagging, ALWAYS set it back to 'SNAPSHOT' and increment the version.
+# Then commit and push again.
   version=6.1
   release=SNAPSHOT
 
 # Dependencies
-  modmenu_version=1.8.0.1.15-pre3+build.14
+  modmenu_version=1.8.+
   http_client_version=4.3.2
   kirin_version=1.5-1.15
