--- a/gradle.properties
+++ b/gradle.properties
@@ -12,13 +12,8 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-
-# === READ THIS === #
-# When making a release, change release to 'RELEASE'.
-# After committing and tagging, ALWAYS set it back to 'SNAPSHOT' and increment the version.
-# Then commit and push again.
   version=6.1
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
   modmenu_version=1.8.+
