--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/use
-  minecraft_version=1.15
-  yarn_mappings=1.15+build.1:v2
-  loader_version=0.7.2+build.174
+  minecraft_version=1.15.1
+  yarn_mappings=1.15.1+build.26:v2
+  loader_version=0.7.3+build.176
 
 # Mod Properties
   group=com.minelittlepony
@@ -18,4 +18,4 @@ org.gradle.daemon=false
 # Dependencies
   modmenu_version=1.8.+
   http_client_version=4.3.2
-  kirin_version=1.5-1.15
+  kirin_version=1.5.1-1.15.1-SNAPSHOT
