--- a/gradle.properties
+++ b/gradle.properties
@@ -13,9 +13,9 @@ org.gradle.daemon=false
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
   version=6.1
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
   modmenu_version=1.8.+
   http_client_version=4.3.2
-  kirin_version=1.5.2-1.15.2-SNAPSHOT
+  kirin_version=1.5.2-1.15.2
