--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ org.gradle.daemon=false
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
   version=6.1
-  release=RELEASE
+  release=SAPSHOT
 
 # Dependencies
   modmenu_version=1.8.+
