--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,8 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.1
-  release=SNAPSHOT
+  version=6.1.1
+  release=RELEASE
 
 # Dependencies
   modmenu_version=1.8.+
