Back to snapshots

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,8 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=5.6.1
-  release=RELEASE
+  version=5.6.2
+  release=SNAPSHOT
 
 # Dependencies
   # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric
