--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,8 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.1.3
-  release=RELEASE
+  version=6.1.4
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.8.+
