--- a/common/build.gradle
+++ b/common/build.gradle
@@ -6,6 +6,11 @@ plugins {
 
 apply from: 'minecraft.gradle'
 
+minecraft {
+    refmapName = 'hdskins.mixin.refmap.json'
+    accessWidener 'src/main/resources/hdskins.aw'
+}
+
 dependencies {
     intermediary "net.fabricmc:intermediary:${project.minecraft_version}:v2"
     mcpconfig "de.oceanlabs.mcp:mcp_config:${project.minecraft_version}@zip"
@@ -13,10 +18,10 @@ dependencies {
     implementation "org.apache.httpcomponents:httpmime:${project.http_client_version}"
     include "org.apache.httpcomponents:httpmime:${project.http_client_version}"
 
-    modApi("com.minelittlepony:Kirin:${project.kirin_version}") {
-        transitive = false
-    }
-    include "com.minelittlepony:Kirin:${project.kirin_version}"
+//    modApi("com.minelittlepony:Kirin:${project.kirin_version}") {
+//        transitive = false
+//    }
+//    include "com.minelittlepony:Kirin:${project.kirin_version}"
 
     include files("letsencryptcraft-fabric-1.3.1.jar")
 
