--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ allprojects {
     targetCompatibility = JavaVersion.VERSION_1_8
     sourceCompatibility = JavaVersion.VERSION_1_8
 
+    archivesBaseName = "$rootProject.name-$name"
+
     repositories {
         jcenter()
         ["snapshot", "release"].each { type ->
