--- a/common/build.gradle
+++ b/common/build.gradle
@@ -23,7 +23,7 @@ dependencies {
 //    }
 //    include "com.minelittlepony:Kirin:${project.kirin_version}"
 
-    include files("letsencryptcraft-fabric-1.3.1.jar")
+//    include files("letsencryptcraft-fabric-1.3.1.jar")
 
 }
 
@@ -34,4 +34,10 @@ tasks.withType(JavaCompile) {
 task sourcesJar(type: Jar, dependsOn: classes) {
     classifier = 'sources'
     from sourceSets.main.allSource
+}
+
+afterEvaluate {
+    remapJar {
+        remapAccessWidener = false
+    }
 }
