--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -4,9 +4,11 @@ plugins {
 }
 
 apply from: project(':common').file('minecraft.gradle')
+apply from: file('auth.gradle')
 
 minecraft {
     refmapName = "hdskins.mixin.refmap.json"
+    accessWidener project(':common').file('src/main/resources/hdskins.aw')
 }
 
 dependencies {
@@ -20,6 +22,9 @@ dependencies {
     modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
 
     compile project(':common')
+
+    include parent.files("letsencryptcraft-fabric-1.3.1.jar")
+    include rootProject.files('letsencryptcraft-fabric-1.3.1.jar')
 }
 
 processResources {
@@ -33,4 +38,10 @@ processResources {
     from(sourceSets.main.resources.srcDirs) {
         exclude 'fabric.mod.json'
     }
+}
+
+jar {
+    Jar commonJar = project(':common').jar
+    dependsOn commonJar
+    from zipTree(commonJar.archiveFile)
 }
