--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java-library'
-    id 'fabric-loom' version '0.2.7-SNAPSHOT'
+    id 'fabric-loom' version '0.4-SNAPSHOT'
     id 'maven-publish'
 }
 
@@ -55,10 +55,10 @@ dependencies {
     modApi "net.fabricmc:fabric-loader:${project.loader_version}"
     compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
 
-    modApi "net.fabricmc.fabric-api:fabric-api-base:0.1.2+"
-    modApi "net.fabricmc.fabric-api:fabric-events-lifecycle-v0:0.1.2+1a47cd7816"
-    modApi "net.fabricmc.fabric-api:fabric-resource-loader-v0:0.1.14+"
-    modApi "net.fabricmc.fabric-api:fabric-renderer-registries-v1:2.0.1+"
+    modApi fabricApi.module("fabric-api-base", project.fabric_version)
+    modApi fabricApi.module("fabric-events-lifecycle-v0", project.fabric_version)
+    modApi fabricApi.module("fabric-resource-loader-v0", project.fabric_version)
+    modApi fabricApi.module("fabric-renderer-registries-v1", project.fabric_version)
 
     implementation "org.apache.httpcomponents:httpmime:${project.http_client_version}"
     include "org.apache.httpcomponents:httpmime:${project.http_client_version}"
