--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=20w20b
-  yarn_mappings=20w20b+build.1:v2
-  loader_version=0.8.3+build.196
+  minecraft_version=1.16-rc1
+  yarn_mappings=1.16-rc1+build.4:v2
+  loader_version=0.8.8+build.202
+  fabric_version=0.12.5+build.367-1.16
 
 # Mod Properties
   group=com.minelittlepony
@@ -16,6 +17,6 @@ org.gradle.daemon=false
   release=SNAPSHOT
 
 # Dependencies
-  modmenu_version=1.11.+
+  modmenu_version=1.12.+
   http_client_version=4.3.2
-  kirin_version=1.6.4-20w20b-SNAPSHOT
+  kirin_version=1.6.4-1.16-rc1-1.16-SNAPSHOT
