--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.2
-  release=RELEASE
+  version=6.2.1
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.12.+
