--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,20 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=1.16-rc1
-  yarn_mappings=1.16-rc1+build.4:v2
-  loader_version=0.8.8+build.202
-  fabric_version=0.12.5+build.367-1.16
+  minecraft_version=1.16.2
+  yarn_mappings=1.16.2+build.19:v2
+  loader_version=0.9.1+build.205
+  fabric_version=0.18.0+build.397-1.16
 
 # Mod Properties
   group=com.minelittlepony
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.2.1
+  version=6.3
   release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.12.+
   http_client_version=4.3.2
-  kirin_version=1.6.4-1.16-rc1-1.16
+  kirin_version=1.7-1.16.2-SNAPSHOT
