--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,9 @@ org.gradle.daemon=false
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
   version=6.3
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
   modmenu_version=1.12.+
   http_client_version=4.3.2
-  kirin_version=1.7-1.16.2-SNAPSHOT
+  kirin_version=1.7-1.16.2
