--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ org.gradle.daemon=false
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
   version=6.3.1
-  release=RELEASE
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.12.+
