--- a/gradle.properties
+++ b/gradle.properties
@@ -3,18 +3,18 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=1.16.3
-  yarn_mappings=1.16.3+build.47:v2
-  loader_version=0.10.3+build.211
-  fabric_version=0.24.1+build.412-1.16
+  minecraft_version=1.16.4
+  yarn_mappings=1.16.4+build.6
+  loader_version=0.10.6+build.214
+  fabric_version=0.25.1+build.416-1.16
 
 # Mod Properties
   group=com.minelittlepony
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.3.3
-  release=RELEASE
+  version=6.3.4
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.12.+
