--- a/gradle.properties
+++ b/gradle.properties
@@ -3,20 +3,20 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=1.16.5
-  yarn_mappings=1.16.5+build.4
-  loader_version=0.11.1
-  fabric_version=0.30.3+1.16
+  minecraft_version=20w46a
+  yarn_mappings=20w46a+build.15
+  loader_version=0.10.8
+  fabric_version=0.26.0+1.17
 
 # Mod Properties
   group=com.minelittlepony
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.3.7
+  version=6.4
   release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.12.+
   http_client_version=4.3.2
-  kirin_version=1.7.1-1.16.5
+  kirin_version=1.8-20w46a-SNAPSHOT
