--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.3.5
-  release=SNAPSHOT
+  version=6.3.4
+  release=RELEASE
 
 # Dependencies
   modmenu_version=1.12.+
