--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://modmuss50.me/fabric.html
-  minecraft_version=20w49a
-  yarn_mappings=20w49a+build.1
-  loader_version=0.10.8
-  fabric_version=0.27.2+1.17
+  minecraft_version=21w05b
+  yarn_mappings=21w05b+build.5
+  loader_version=0.11.1
+  fabric_version=0.30.1+1.17
 
 # Mod Properties
   group=com.minelittlepony
@@ -17,6 +17,6 @@ org.gradle.daemon=false
   release=SNAPSHOT
 
 # Dependencies
-  modmenu_version=1.12.+
+  modmenu_version=1.14.+
   http_client_version=4.3.2
-  kirin_version=1.8-20w49a-SNAPSHOT
+  kirin_version=1.8-21w05b-SNAPSHOT
