--- a/gradle.properties
+++ b/gradle.properties
@@ -13,10 +13,10 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.3.6
-  release=RELEASE
+  version=6.3.7
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=1.12.+
   http_client_version=4.3.2
-  kirin_version=1.7-1.16.2
+  kirin_version=1.7.1-1.16.5
