--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,10 @@ minecraft {
 
 repositories {
     maven {
+        name = 'modmenu'
+        url = 'https://maven.terraformersmc.com/releases'
+    }
+    maven {
         name = 'minelp'
         url = 'https://repo.minelittlepony-mod.com/maven/snapshot'
     }
@@ -65,10 +69,7 @@ dependencies {
     modApi "com.minelittlepony:Kirin:${project.kirin_version}"
     include "com.minelittlepony:Kirin:${project.kirin_version}"
 
-    // TODO: Fix your maven, @Prospector
-    /*modCompileOnly("io.github.prospector:modmenu:${project.modmenu_version}") {
-        transitive = false
-    }*/
+    modCompileOnly("com.terraformersmc:modmenu:${project.modmenu_version}")
 }
 
 processResources {
