--- a/gradle.properties
+++ b/gradle.properties
@@ -14,9 +14,9 @@ org.gradle.daemon=false
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
   version=6.4.6
-  release=SNAPSHOT
+  release=RELEASE
 
 # Dependencies
   modmenu_version=2.0.0-beta.7
   http_client_version=4.3.2
-  kirin_version=1.8.6-1.17-rc1
+  kirin_version=1.8.7-1.17
