--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,8 @@ org.gradle.daemon=false
   displayname=HDSkins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
-  version=6.4.6
-  release=RELEASE
+  version=6.4.7
+  release=SNAPSHOT
 
 # Dependencies
   modmenu_version=2.0.0-beta.7
