--- a/.github/workflows/gradle-build.yml
+++ b/.github/workflows/gradle-build.yml
@@ -1,18 +1,15 @@
 name: Run Gradle on push and pull request
-on: 
+on:
   - push
   - pull_request
 jobs:
   gradle:
-    strategy:
-      matrix:
-        java-version: [ 16 ]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-java@v1
         with:
-          java-version: ${{ matrix.java-version}}
+          java-version: 16
       - uses: eskatos/gradle-command-action@v1
         with:
           arguments: check
