--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,11 @@ plugins {
     id 'maven-publish'
 }
 
-targetCompatibility = JavaVersion.VERSION_16
-sourceCompatibility = JavaVersion.VERSION_16
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(16)
+    }
+}
 
 def createVersion() {
     def parts = []
