--- a/gradle.properties
+++ b/gradle.properties
@@ -20,3 +20,4 @@ org.gradle.daemon=false
   modmenu_version=2.0.0-beta.7
   http_client_version=4.3.2
   kirin_version=1.8.7-1.17
+  methanol_version=1.6.0
