Switch to reckon and gh actions

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'fabric-loom' version '0.8-SNAPSHOT'
     id 'maven-publish'
+    id 'org.ajoberstar.reckon' version '0.13.0'
 }
 
 java {
@@ -9,35 +10,17 @@ java {
     }
 }
 
-def createVersion() {
-    def parts = []
-
-    if (project.release != 'RELEASE') {
-        parts.push project.release
-    }
-
-    def branch = System.env.TRAVIS_BRANCH
-
-    if (branch != null && branch != 'master' && !project.minecraft_version.startsWith(branch)) {
-        parts.push branch
-    }
-
-    parts.push project.minecraft_version
-
-    def ver = project.version
-    if (parts.size > 0) {
-      return ver + '-' + parts.join('-')
-    }
-    return ver
-}
-
-version = createVersion()
 group = project.group
 description = project.displayname
 archivesBaseName = project.name
 
 minecraft {
     refmapName = "hdskins.mixin.refmap.json"
+}
+
+reckon {
+    scopeFromProp()
+    stageFromProp('beta', 'rc', 'final')
 }
 
 repositories {
@@ -75,10 +58,10 @@ dependencies {
 }
 
 processResources {
-    inputs.property "version", project.version
+    inputs.property "version", project.version.toString()
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version
+        expand "version": project.version.toString()
     }
 
     from 'LICENSE'
@@ -136,9 +119,8 @@ publishing {
     repositories {
         maven {
             name = "MineLittlePony"
-            def mvn = 's3://repo.minelittlepony-mod.com/maven'
-            url = release == 'SNAPSHOT' ? "$mvn/snapshot" : "$mvn/release"
-
+            // https://github.com/ajoberstar/reckon/blob/f4a4608f996b39b3ca6eafe4804c5b38435457c4/reckon-gradle/src/main/java/org/ajoberstar/reckon/gradle/ReckonPlugin.java#L82
+            url = "s3://repo.minelittlepony-mod.com/maven/${version.version.stage.value.name == 'beta' ? 'snapshot' : 'release'}"
             credentials(AwsCredentials) {
                 accessKey = System.env.ACCESS_KEY
                 secretKey = System.env.SECRET_KEY
