--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 plugins {
-    id 'fabric-loom' version '0.8-SNAPSHOT'
+    id 'fabric-loom' version '0.10-SNAPSHOT'
     id 'maven-publish'
     id 'org.ajoberstar.reckon' version '0.13.0'
 }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(16)
+        languageVersion = JavaLanguageVersion.of(17)
     }
 }
 
@@ -14,8 +14,8 @@ group = project.group
 description = project.displayname
 archivesBaseName = project.name
 
-minecraft {
-    refmapName = "hdskins.mixin.refmap.json"
+loom {
+    mixin.defaultRefmapName = "hdskins.mixin.refmap.json"
 }
 
 reckon {
@@ -82,12 +82,7 @@ task sourcesJar(type: Jar, dependsOn: classes) {
 publishing {
     publications {
         maven(MavenPublication) {
-            afterEvaluate {
-                artifact(remapJar)
-            }
-            artifact(sourcesJar) {
-                builtBy remapSourcesJar
-            }
+            from components.java
 
             pom {
                 name = "HDSkins"
