--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
 plugins {
     id 'fabric-loom' version '0.10-SNAPSHOT'
     id 'maven-publish'
+    id 'com.modrinth.minotaur' version '1.1.0'
     id 'org.ajoberstar.reckon' version '0.13.0'
 }
 apply plugin: 'dex.plugins.outlet'
