--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,10 @@ dependencies {
     include "com.minelittlepony:kirin:${project.kirin_version}"
 
     // modCompileOnly "eu.midnightdust.motschen:betterbeds:1.2.0"
-    // modCompileOnly "net.coderbot.iris_mc1_17:iris-mc1.17:1.1.1"
+    // modApi fabricApi.module("fabric-rendering-data-attachment-v1", project.fabric_version)
+    // modApi fabricApi.module("fabric-rendering-fluids-v1", project.fabric_version)
+    // modCompileOnly "me.jellysquid.mods.sodium:sodium-fabric-mc1.18:0.4.0-alpha5+build.9"
+    // modCompileOnly "net.coderbot.iris_mc1_18:iris-mc1.18:1.1.3"
     modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
 }
 
