--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/develop
-  minecraft_version=1.18.2
-  yarn_mappings=1.18.2+build.1
-  loader_version=0.13.3
-  fabric_version=0.47.8+1.18.2
+  minecraft_version=1.19
+  yarn_mappings=1.19+build.1
+  loader_version=0.14.7
+  fabric_version=0.55.3+1.19
 
 # Mod Properties
   group=com.minelittlepony
@@ -20,6 +20,6 @@ org.gradle.daemon=false
   modrinth_project_id=FzE9gshV
 
 # Dependencies
-  modmenu_version=3.1.0
+  modmenu_version=4.0.0
   http_client_version=4.3.2
-  kirin_version=1.10.0
+  kirin_version=1.11.0-beta.2
