--- a/gradle.properties
+++ b/gradle.properties
@@ -22,4 +22,4 @@ org.gradle.daemon=false
 # Dependencies
   modmenu_version=4.0.0
   http_client_version=4.3.2
-  kirin_version=1.11.0-beta.2
+  kirin_version=1.11.0
