--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 buildscript {
     dependencies {
-        classpath 'com.github.dexman545:Outlet:1.2.0'
+        classpath 'com.github.dexman545:Outlet:1.3.10'
     }
 }
 plugins {
     id 'fabric-loom' version '0.12-SNAPSHOT'
     id 'maven-publish'
-    id 'com.modrinth.minotaur' version '1.1.0'
+    id 'com.modrinth.minotaur' version '2.+'
     id 'org.ajoberstar.reckon' version '0.13.0'
 }
 apply plugin: 'dex.plugins.outlet'
@@ -88,22 +88,26 @@ tasks.withType(JavaCompile) {
     options.encoding = "UTF-8"
 }
 
-import com.modrinth.minotaur.TaskModrinthUpload
-task publishModrinth (type: TaskModrinthUpload){
+tasks.modrinth {
     onlyIf {
       def stage = version.version.stage.value
       stage == null || stage.name != 'beta'
     }
+}
 
+modrinth {
     token = System.env.MODRINTH_KEY
     projectId = project.modrinth_project_id
+    //featured = true
     versionNumber = version.toString()
     versionName = archivesBaseName + '-' + version
     changelog = "[Changelog](https://github.com/MineLittlePony/HDSkins/releases/tag/${version.toString()})"
-    uploadFile = jar.outputs.getFiles().asPath // This is the java jar task
-    addLoader(project.modrinth_loader_type)
+    uploadFile = remapJar
     outlet.mcVersions().each{ver ->
-      addGameVersion ver
+      gameVersions.add ver
+    }
+    dependencies {
+       required.project 'P7dR8mSH'
     }
 }
 
