--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/develop
-  minecraft_version=1.19.2
-  yarn_mappings=1.19.2+build.3
-  loader_version=0.14.9
-  fabric_version=0.59.0+1.19.2
+  minecraft_version=1.19.3-pre2
+  yarn_mappings=1.19.3-pre2+build.1
+  loader_version=0.14.10
+  fabric_version=0.67.1+1.19.3
 
 # Mod Properties
   group=com.minelittlepony
@@ -15,11 +15,11 @@ org.gradle.daemon=false
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
 
 # Publishing
-  minecraft_version_range=>=1.18
+  minecraft_version_range=>=1.19.3-pre1
   modrinth_loader_type=fabric
   modrinth_project_id=FzE9gshV
 
 # Dependencies
-  modmenu_version=4.0.6
+  modmenu_version=5.0.0-alpha.3
   http_client_version=4.3.2
-  kirin_version=1.12.0
+  kirin_version=1.13.0-beta.1
