--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/develop
-  minecraft_version=1.19.3
-  yarn_mappings=1.19.3+build.2
-  loader_version=0.14.11
-  fabric_version=0.68.1+1.19.3
+  minecraft_version=1.19.4
+  yarn_mappings=1.19.4+build.1
+  loader_version=0.14.17
+  fabric_version=0.76.0+1.19.4
 
 # Mod Properties
   group=com.minelittlepony
@@ -15,10 +15,10 @@ org.gradle.daemon=false
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
 
 # Publishing
-  minecraft_version_range=>=1.19.3
+  minecraft_version_range=>=1.19.4
   modrinth_loader_type=fabric
   modrinth_project_id=FzE9gshV
 
 # Dependencies
-  modmenu_version=5.0.0-alpha.3
-  kirin_version=1.13.2
+  modmenu_version=6.1.0-rc.4
+  kirin_version=1.14.0-beta.3
