--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/develop
-  minecraft_version=1.20.1
-  yarn_mappings=1.20.1+build.9
-  loader_version=0.14.21
-  fabric_version=0.85.0+1.20.1
+  minecraft_version=1.19.4
+  yarn_mappings=1.19.4+build.1
+  loader_version=0.14.17
+  fabric_version=0.76.0+1.19.4
 
 # Mod Properties
   group=com.minelittlepony
@@ -15,10 +15,10 @@ org.gradle.daemon=false
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
 
 # Publishing
-  minecraft_version_range=>=1.20.0
+  minecraft_version_range=1.19.4
   modrinth_loader_type=fabric
   modrinth_project_id=FzE9gshV
 
 # Dependencies
-  modmenu_version=7.0.0-beta.2
-  kirin_version=1.15.2
+  modmenu_version=6.1.0-rc.4
+  kirin_version=1.15.2-beta.1+1.19.4
