--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ org.gradle.daemon=false
 
 # Dependencies
   modmenu_version=6.1.0-rc.4
-  kirin_version=1.15.2-beta.1+1.19.4
+  kirin_version=1.15.2+1.19.4
