--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     }
 }
 plugins {
-    id 'fabric-loom' version '0.12-SNAPSHOT'
+    id 'fabric-loom' version '1.3-SNAPSHOT'
     id 'maven-publish'
     id 'com.modrinth.minotaur' version '2.+'
     id 'org.ajoberstar.reckon' version '0.13.0'
@@ -63,11 +63,6 @@ dependencies {
     modApi "com.minelittlepony:kirin:${project.kirin_version}"
     include "com.minelittlepony:kirin:${project.kirin_version}"
 
-    // modCompileOnly "eu.midnightdust.motschen:betterbeds:1.2.0"
-    // modApi fabricApi.module("fabric-rendering-data-attachment-v1", project.fabric_version)
-    // modApi fabricApi.module("fabric-rendering-fluids-v1", project.fabric_version)
-    // modCompileOnly "me.jellysquid.mods.sodium:sodium-fabric-mc1.18:0.4.0-alpha5+build.9"
-    // modCompileOnly "net.coderbot.iris_mc1_18:iris-mc1.18:1.1.3"
     modCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"
 }
 
@@ -75,7 +70,10 @@ processResources {
     inputs.property "version", project.version.toString()
 
     filesMatching("fabric.mod.json") {
-        expand "version": project.version.toString()
+        expand "version": project.version.toString(),
+                "minecraftVersion": project.minecraft_version_range,
+                "loaderVersion": ">=${project.loader_version}",
+                "fabricVersion": ">=${project.fabric_version}"
     }
 
     from 'LICENSE'
@@ -99,6 +97,7 @@ modrinth {
     versionNumber = version.toString()
     versionName = archivesBaseName + '-' + version
     changelog = "[Changelog](https://github.com/MineLittlePony/HDSkins/releases/tag/${version.toString()})"
+    loaders = ['fabric', 'quilt']
     uploadFile = remapJar
     outlet.mcVersions().each{ver ->
       gameVersions.add ver
