--- a/gradle.properties
+++ b/gradle.properties
@@ -3,22 +3,22 @@ org.gradle.daemon=false
 
 # Fabric Properties
   # check these on https://fabricmc.net/develop
-  minecraft_version=1.20.1
-  yarn_mappings=1.20.1+build.9
-  loader_version=0.14.21
-  fabric_version=0.85.0+1.20.1
+  minecraft_version=1.20.2-rc1
+  yarn_mappings=1.20.2-rc1+build.2
+  loader_version=0.14.22
+  fabric_version=0.88.5+1.20.2
 
 # Mod Properties
   group=com.minelittlepony
-  displayname=HDSkins
+  displayname=HD Skins
   authors=Mumfrey, Killjoy1221, Sollace
   description=Separate skin server that also supports HD skins. Access via button on the main menu.
 
 # Publishing
-  minecraft_version_range=>=1.20.0
+  minecraft_version_range=>=1.20.2
   modrinth_loader_type=fabric
   modrinth_project_id=FzE9gshV
 
 # Dependencies
-  modmenu_version=7.0.0-beta.2
-  kirin_version=1.15.2
+  modmenu_version=8.0.0-beta.1
+  kirin_version=1.16.0-beta.1+1.20.2
