--- a/build.gradle
+++ b/build.gradle
@@ -36,18 +36,9 @@ reckon {
 
 repositories {
     mavenLocal()
-    maven {
-        name = 'modmenu'
-        url = 'https://maven.terraformersmc.com/releases'
-    }
-    maven {
-        name = 'minelp'
-        url = 'https://repo.minelittlepony-mod.com/maven/snapshot'
-    }
-    maven {
-        name = 'minelp-release'
-        url = 'https://repo.minelittlepony-mod.com/maven/release'
-    }
+    maven { name 'modmenu'; url 'https://maven.terraformersmc.com/releases' }
+    maven { name 'minelp'; url 'https://repo.minelittlepony-mod.com/maven/snapshot' }
+    maven { name 'minelp-release'; url 'https://repo.minelittlepony-mod.com/maven/release' }
 }
 
 dependencies {
@@ -59,6 +50,7 @@ dependencies {
     modApi fabricApi.module("fabric-lifecycle-events-v1", project.fabric_version)
     modApi fabricApi.module("fabric-resource-loader-v0", project.fabric_version)
     modApi fabricApi.module("fabric-rendering-v1", project.fabric_version)
+    modApi fabricApi.module("fabric-screen-api-v1", project.fabric_version)
 
     modApi "com.minelittlepony:kirin:${project.kirin_version}"
     include "com.minelittlepony:kirin:${project.kirin_version}"
