--- a/gradle.properties
+++ b/gradle.properties
@@ -21,4 +21,4 @@ org.gradle.daemon=false
 
 # Dependencies
   modmenu_version=8.0.0-beta.1
-  kirin_version=1.16.0-beta.4+1.20.2
+  kirin_version=1.16.0+1.20.2
