--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ java {
 }
 
 outlet.allowSnapshotsForProject = false
-outlet.mcVersionRange = project.minecraft_version_range
+outlet.mcVersionRange = ">=${project.minecraft_version}"
 
 group = project.group
 description = project.displayname
@@ -63,7 +63,7 @@ processResources {
 
     filesMatching("fabric.mod.json") {
         expand "version": project.version.toString(),
-                "minecraftVersion": project.minecraft_version_range,
+                "minecraftVersion": ">=${project.minecraft_version}",
                 "loaderVersion": ">=${project.loader_version}",
                 "fabricVersion": ">=${project.fabric_version}"
     }
@@ -95,7 +95,8 @@ modrinth {
       gameVersions.add ver
     }
     dependencies {
-       required.project 'P7dR8mSH'
+       required.project 'P7dR8mSH' // Fabric-Api
+       required.project '9aNz8Zqn' // Kirin
     }
 }
 
